--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-use-cookie": "^1.6.1",
     "shadcn-ui": "^0.4.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.1.0",
