--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.2",
+    "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.294.0",
