--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,4 @@
-DATABASE_URL="mysql://USER:PASSWORD@localhost:3306/mydb"
+DATABASE_USERNAME=YOUR_DATABASE_USERNAME
+DATABASE_PASSWORD=YOUR_DATABASE_PASSWORD
+DATABASE_NAME=YOUR_PREFERED_DATABASE_NAME
+DATABASE_URL=postgresql://YOUR_DATABASE_USERNAME:YOUR_DATABASE_PASSWORD@YOUR_HOSTNAME:5432/YOUR_PREFERED_DATABASE_NAME
