--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,34 +1,37 @@
-version: '3.8'
-
 services:
   client:
     build:
       context: .
-      dockerfile: Dockerfile 
-    container_name: frontend 
+      dockerfile: Dockerfile
+    container_name: blog-app
     ports:
-      - '3000:3000'
-    env_file: ./.env 
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
+      - "3000:3000"
+    env_file: ./.env
+    develop:
+      watch:
+        - action: sync
+          path: ./
+          target: /app
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: package.json
     depends_on:
-      - postgres 
+      - postgres
 
   postgres:
-    image: postgres:17
+    image: postgres:17-alpine3.21
     container_name: postgresql_server
     env_file: ./.env
     environment:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
-      POSTGRES_USER: ${DATABASE_USERNAME} 
+      POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_DB: ${DATABASE_NAME}
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
-      - '5432:5432'
+      - "5432:5432"
     command: -p 5432
 
 volumes:
   pgdata:
-
-
