--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
-    "next": "14.0.3",
+    "next": "^14.2.30",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-use-cookie": "^1.6.1",
-    "shadcn-ui": "^0.4.1",
+    "shadcn-ui": "^0.9.5",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
